# razochar6e

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  rustfmt.toml  setup.ps1  setup.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
completions/: README.md  _razochar6e  razochar6e.bash  razochar6e.fish
deploy/: 99-razochar6e-charge.rules  razochar6e-thresholds.service
docs/: QUICKSTART-ROG-WSL.md  QUICKSTART-WINDOWS.md  TROUBLESHOOTING.md  VENDORS.md
examples/: config.toml
scripts/: asus-battery-limit.ps1  cargo-build.sh  install-persist-admin.ps1  install-prebuilt.sh  install-windows.ps1  install.sh  razochar6e-host.ps1
src/: cli.rs  completions.rs  config.rs  doctor.rs  error.rs  main.rs  probe.rs  status.rs
src/backend/: linux_sysfs.rs  macos_cli.rs  mod.rs  registry.rs  windows_asus.rs  windows_wmi.rs  wsl_bridge.rs
src/persist/: mod.rs
