[package]
name = "razochar6e"
version = "0.2.5"
edition = "2021"
rust-version = "1.74"
description = "Cross-platform battery charge scheduling — firmware-backed 20–80% (and custom) thresholds"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jrb00013/razochar6e"
homepage = "https://github.com/jrb00013/razochar6e"
keywords = ["battery", "charging", "laptop", "power", "asus", "thinkpad", "wsl"]
categories = ["command-line-utilities", "hardware-support"]
authors = ["jrb00013"]

[[bin]]
name = "razochar6e"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
directories = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
